# apidance-py-sdk

./: .env.example  .gitignore  LICENSE  README.md  example.py  mcp_server.py  pyproject.toml
.github/workflows/: python-package.yml
apidance/: __init__.py  client.py  exceptions.py  models.py
apidance/utils/: __init__.py  markdown.py
tests/: test_rich.json  test_richtext.py
