[tool.poetry]
name = "apidance"
version = "0.4.1"
description = "https://apidance.pro/ community python sdk"
authors = ["script-money <hello@script.money>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
