[project]
name = "apidance"
version = "0.6.2"
description = "https://apidance.pro/ community python sdk"
authors = [{ name = "script-money", email = "hello@script.money" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.25.2",
    "mcp[cli]>=1.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.9",
]
